--- a/Main.tex
+++ b/Main.tex
@@ -212,8 +212,11 @@ ${ \ } $ \vspace{4cm}
 %% Titlepage 1 
 %
 
+%%% Im not sure on the title currently. We havent actually applied theorem proving to train control system but model checking
+%%% The interactive theorem proving was applied to our SAT algorithm
+
 \begin{center}
-{\huge \bf Application of Verified SAT algorithms to the Verification of Train Control Systems}
+{\huge \bf A Selection of Tools and Techniques for the Verification of Train Control Systems }
 \end{center}
 
 \begin{center}
@@ -326,13 +329,13 @@ Signed:
 
 \input{Background.tex}
 
-
+\input{Maude.tex}
 
 
 
 
 \bibliographystyle{alpha}
-\bibliography{disbib}
+\bibliography{lit.bib}
 
 \input{Appendix.tex}
 
