--- a/Main.tex
+++ b/Main.tex
@@ -10,7 +10,7 @@
 \usepackage{fancyvrb}
 \usepackage{floatflt}
 \usepackage{multirow}
-
+\usepackage{url}
 
 \usepackage{listings}
 \usepackage{minitoc}
@@ -328,6 +328,10 @@ Signed:
 
 
 \input{Background.tex}
+
+\input{EVDP.tex}
+
+\input{ECLSA.tex}
 
 \input{Maude.tex}
 
