--- a/Maude.tex
+++ b/Maude.tex
@@ -1,5 +1,5 @@
 \thesischapter{The Application of Real Time Maude to Model and Verify the European Rail Traffic Management System}
-In the following we present the Maude \cite{Maude} and Real Time Maude \cite{RTMaude} tools and describe an approach using these tools to model and verify ERTMS \ref{}.
+In the following we present the Maude \cite{MC03,Maude} and Real Time Maude \cite{PO02,PO04,RTMaude} tools and describe an approach using these tools to model and verify ERTMS \ref{}.
 
 
 \section{The European Rail Traffic Management System}
