--- a/lit.bib
+++ b/lit.bib
@@ -2,6 +2,27 @@
 % Encoding: UTF-8
 
 
+@InProceedings{PO04,
+  Title                    = {Specification and Analysis of Real-Time Systems Using {R}eal-{T}ime {M}aude},
+  Author                   = {{\"O}lveczky, P. C. and Meseguer, J.},
+  Booktitle                = {Fundamental Approaches to Software Engineering (FASE 2004)},
+  Year                     = {2004},
+  Editor                   = {Margaria, T. and Wermelinger, M.},
+  Pages                    = {354-358},
+  Publisher                = {Springer},
+  Series                   = {Lecture {N}otes in {C}omputer {S}cience},
+  Volume                   = {2984}
+}
+
+@Article{PO02,
+  Title                    = {Specification of Real-Time and Hybrid Systems in Rewriting Logic},
+  Author                   = {{\"O}lveczky, P. C. and Meseguer, J.},
+  Journal                  = {Theoretical Computer Science},
+  Year                     = {2002},
+  Pages                    = {359-405},
+  Volume                   = {285}
+}
+
 @InCollection{GS06,
   Title                    = {Designing Safe, Reliable Systems Using Scade},
   Author                   = {Abdulla, P. and Deneux, J. and St{\aa}lmarck, G. and {\AA}gren, H. and {\AA}kerlund, O.},
@@ -331,6 +352,18 @@
   Author                   = { Clarke, E. M. and Grumberg, O. and Peled, P. A.},
   Publisher                = {MIT Press},
   Year                     = {1999}
+}
+
+@InProceedings{MC03,
+  Title                    = {The {M}aude 2.0 System},
+  Author                   = {Clavel, M. and Durán, F. and Eker, S. and Lincoln, P. and Martí-Oliet, N. and Meseguer, J. and Talcott, C.},
+  Booktitle                = {International Conference on Rewriting Techniques and Applications (RTA)},
+  Year                     = {2003},
+  Editor                   = {Nieuwenhuis, R.},
+  Pages                    = {76-87},
+  Publisher                = {Springer Berlin Heidelberg},
+  Series                   = {Lecture {N}otes in {C}omputer {S}cience},
+  Volume                   = {2706}
 }
 
 @InProceedings{EC09,
@@ -1091,11 +1124,27 @@
   Volume                   = {77}
 }
 
+@Misc{Maude,
+  Title                    = {Maude},
+  HowPublished             = {\url{http://maude.cs.uiuc.edu/}},
+  Note                     = {Accessed: 2014-01-22},
+
+  Owner                    = {csal}
+}
+
 @Misc{MinlogSystem,
   Note                     = {Minlog, www.minlog-system.de},
 
   Owner                    = {csal},
   Timestamp                = {2013.01.15}
+}
+
+@Misc{RTMaude,
+  Title                    = {Real {T}ime {M}aude},
+  HowPublished             = {\url{http://heim.ifi.uio.no/peterol/RealTimeMaude/}},
+  Note                     = {Accessed: 2014-01-22},
+
+  Owner                    = {csal}
 }
 
 @Misc{Scade,
